--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "gulp-watch": "^5.0.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
